# Seed-Atlas

./: .gitignore  README.md  SOURCE_CODE.md  THIRD_PARTY_NOTICES.md  VERSION_SUPPORT.md  buildguide.md  seed-atlas.pro
.github/workflows/: native-packages.yml
Licenses/: Qt-LGPL-3.0.html
cubiomes/: finders.c  makefile  tests_versions.c  util.c
etc/: org.seedatlas.SeedAtlas.desktop  org.seedatlas.SeedAtlas.metainfo.xml
installer/: PACKAGING.md
installer/flatpak/: build-flatpak.sh  org.seedatlas.SeedAtlas.yml
installer/macos/: build-dmg.sh
installer/windows/: SeedAtlas.iss  build-installer.ps1
rc/: app_icon.icns  icons.qrc  modern.qss  style.qrc
seedatlas-engine/: CMakeLists.txt  README.md  biomenoise.c  biomes.c  biomes.h  finders.c  finders.h  makefile  noise.h  quadbase.c  quadbase.h  tests_versions.c
src/: aboutdialog.h  aboutdialog.ui  biomecolordialog.cpp  biomecolordialog.h  conditiondialog.cpp  conditiondialog.h  conditiondialog.ui  config.cpp  config.h  configdialog.cpp  configdialog.h  configdialog.ui  exportdialog.cpp  exportdialog.h  extgendialog.cpp  formconditions.cpp  formconditions.ui  formgen48.ui  formsearchcontrol.cpp  formsearchcontrol.h  formsearchcontrol.ui  fortresslayout.cpp  fortresslayout.h  gotodialog.cpp  headless.cpp  layerdialog.cpp  layerdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mappingworkers.h  maptoolsdialog.cpp  mapview.cpp  mapview.h  message.cpp  motioncontroller.cpp  motioncontroller.h  presetdialog.cpp  presetdialog.ui  (+24 more)
src/libwinsane/: Makefile
